--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container" id="tictactoe_container">
 
     </div>
-    <button>new game</button>
-    <a href="../index.html">Return to Index</a>
+    <button>NEW GAME</button>
+<!--     <a href="../index.html">Return to Index</a> -->
 
     <script src="./js/tictactoe.js"></script>
 
