quick update for submodule text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     Bit Bit Byte -- we could be calling this as a submodule from separate repo
 </title>
 <body>
-    <h1 id="header">Bit Bit Byte</h1>
+    <h1 id="header">Bit Bit Byte -- we could be calling this as a submodule from separate repo</h1>
     <br>
     <div class="container" id="tictactoe_container">
 
