--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 </head>
 <title>
-    Bit Bit Byte -- we could be calling this as a submodule from separate repo
+    Tic Tac Toe
 </title>
 <body>
     <h1 id="header">Bit Bit Byte -- we could be calling this as a submodule from separate repo</h1>
