--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </title>
 <body>
     <h1 id="header">Bit Bit Byte -- we could be calling this as a submodule from separate repo</h1>
+    <h2>A new message to check with</h2>
     <br>
     <div class="container" id="tictactoe_container">
 
